--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -2,6 +2,6 @@
 	margin: auto;
 }
 
-.extraWidth {
-	width: 110%;
-}
+/* .roomListings {
+	height: 165px;
+} */
